...
                  child: const Text('Esqueci minha senha'),
                ),
              ),
              const SizedBox(height: AppEspacos.md),

              BotaoCustomizado(
                texto: 'Entrar',
                icone: Icons.login,
                carregando: _carregando,
                aoPressionar: _fazerLogin,
              ),

              const SizedBox(height: AppEspacos.xxl),
...
